syntax="proto3";

package polls;

service PollService {

  rpc Insert (Poll) returns (Poll) {}
  rpc ListOne (id) returns (Poll) {}
  rpc UpdateOne (PollSubset) returns (Poll) {}
  rpc DeleteOne (id) returns (Empty) {}

  rpc List (Empty) returns (PollList) {}
}

message Empty {}

message id {
  int32 id = 1;
}

message Poll {
    required int32 id = 1;
    string question = 2;
    int32 numUpvotes = 3;
    bool polleeCanAddOptions = 4;
    bool polleeCanMultiVote = 5;
    bool polleeCanComment = 6;
}

message PollSubset {
  oneof id {
    int32 id_val = 1;
  }
  oneof question {
    string question_val = 2;
  }
  oneof numUpvotes {
    int32 numUpvotes_val = 3;
  } 
  oneof polleeCanAddOptions {
    bool polleeCanAddOptions_val = 4;
  }
  oneof polleeCanMultiVote {
    bool polleeCanMultiVote_val = 5;
  }
  oneof polleeCanComment {
    bool polleeCanComment_val = 6;
  }
}

message Message {
  int32 id = 1;
  string text = 2;
  string timestamp = 3;
  string tag = 4;
}

message Option {
  int32 id = 1;
  string text = 2;
  int32 numVotes = 3;
}

message PollList {
  repeated Poll polls = 1;
}


